--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,43 +1,49 @@
+body{
+  color: #460b1e;
+}
 ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
     list-style-type: none;
-    background-color: #595353;
-  }
+    background-color: #fde6e9;
+    border: solid #fad1d7;
+    border-radius: 10px;
+}
   
-  li {
+li {
     float: left;
-  }
+}
   
-  li a {
-    color: white;
+li a {
+    color: #460b1e;
     display: block;
     padding: 14px 16px; /* Arriba y abajo 14, izquierda y derecha 16 */
     text-decoration: none;
-  }
+    transition: 0.4s;
+}
   
-  li a:hover {
-    background-color: #4eb9cc;
-  }
+li a:hover {
+    background-color: #f1889a;
+}
   
-  .activo {
-    background-color: #20597d;
-  }
+.activo {
+    background-color: #d12d55;
+}
   
-  .derecha {
+.derecha {
     float: right;
-  }
+}
   
-  .miJumbo {
+.miJumbo {
     margin-top: 1rem;
     padding: 32px 16px;
-    background-color: #206dba;
+    background-color: #fde6e9;
+    border: solid #f1889a 1px;
     border-radius: 0.5rem;
     text-align: center;
-    color: aliceblue;
-  }
+}
 
-  .fondo {
-    background-color: rgb(232, 236, 239);
-  }
+.fondo {
+    background-color: #fef2f3;
+}
